Implementando tela de login

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -14,7 +14,35 @@
 </head>
 
 <body>
+    <div id="logo">
+        <img src="../img/bom.svg" alt="SatisfyingYou logo">
+        <h1 id="logo-title">Satisfying.you</h1>
+    </div>
 
+    <main>
+        <div id="main-box">
+            <article id="login-box">
+                <div id="alinhamento">
+                    <h2 id="main-rotulo">Fazer login</h2>
+                    <form>
+                        <label>E-mail</label>
+                        <input class="login-info"  type="text" value="jurandir.pereira@hotmail.com">
+                        <label>Senha</label>
+                        <input class="login-info"  type="text" value="*********">
+                    </form>       
+                    <p id="text-invalido">E-mail e/ou senha inválidos.</p>
+                    <a href="recuperacao.html" class="rec-password">Esqueci minha senha</a>
+                    <div id="rodape">
+                        <a href="cadastro.html" class="criar-conta">Criar conta</a>
+                        <a href="home.html">
+                            <button class="botao-entrar">Entrar</button>
+                        </a>
+                    </div>
+                </div>
+                
+            </article>
+        </div>
+    </main>
 </body>
 
 </html>
