--- a/src/pages/recuperacao.html
+++ b/src/pages/recuperacao.html
@@ -14,7 +14,10 @@
 </head>
 
 <body>
-
+    <div id="logo">
+        <img src="../img/bom.svg" alt="SatisfyingYou logo">
+        <h1 id="logo-title">Satisfying.you</h1>
+    </div>
 </body>
 
 </html>
