Tela de login completa

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -29,9 +29,11 @@
                         <input class="login-info"  type="text" value="jurandir.pereira@hotmail.com">
                         <label>Senha</label>
                         <input class="login-info"  type="text" value="*********">
-                    </form>       
-                    <p id="text-invalido">E-mail e/ou senha inválidos.</p>
-                    <a href="recuperacao.html" class="rec-password">Esqueci minha senha</a>
+                    </form> 
+                    <div id="rec-block">   
+                        <p id="text-invalido">E-mail e/ou senha inválidos.</p>
+                        <a href="recuperacao.html" class="rec-password">Esqueci minha senha</a>
+                    </div>
                     <div id="rodape">
                         <a href="cadastro.html" class="criar-conta">Criar conta</a>
                         <a href="home.html">
