🔃 Atualização de rotas

--- a/src/pages/agradecimento.html
+++ b/src/pages/agradecimento.html
@@ -32,7 +32,7 @@
     <footer>
         <div id="redirecionamento-container">
             <span class="message">Você será redirecionado em 3 segundos...</span>
-            <span class="message">Aguarde ou <a id="link" href="">clique aqui</a></span>
+            <span class="message">Aguarde ou <a id="link" href="home.html">clique aqui</a></span>
         </div>
     </footer>
 </body>
