--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -23,7 +23,7 @@
             <button id="nova-pesquisa">
                 Nova pesquisa
             </button>
-            <a id="sair" href="">
+            <a id="sair" href="login.html">
                 Sair
             </a>
         </nav>
@@ -32,7 +32,7 @@
     <main>
         <div id="pesquisa-container">
             <img id="pesquisa-icon" src="../img/search-icon.png">
-            <input placeholder="Insira o termo de busca..." id="pesquisa-input"  type="text">
+            <input placeholder="Insira o termo de busca..." id="pesquisa-input" type="text">
         </div>
         <div id="content">
             <div class="card">
@@ -66,7 +66,7 @@
                 <span class="card-date">10/10/2023</span>
             </div>
         </div>
-        
+
     </main>
 </body>
 
