Tela de cadastro concluída

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -18,6 +18,34 @@
         <img src="../img/bom.svg" alt="SatisfyingYou logo">
         <h1 id="logo-title">Satisfying.you</h1>
     </div>
+
+    <main>
+        <div id="main-box">
+            <article id="login-box">
+                <div id="alinhamento">
+                    <h2 id="main-rotulo">Criar uma conta no Satisfying.you</h2>
+                    <form>
+                        <label>E-mail</label>
+                        <input class="login-info"  type="text" value="jurandir.pereira@hotmail.com">
+                        <label>Senha</label>
+                        <input class="login-info"  type="text" value="*********">
+                        <label>Repetir Senha</label>
+                        <input class="login-info"  type="text" value="*********">
+                    </form> 
+                    <div id="rec-block">   
+                        <p id="text-invalido">Senhas não conferem.</p>
+                    </div>
+                    <div id="rodape">
+                        <a href="login.html">
+                            <button class="botao-criar">Criar</button>
+                        </a>
+                    </div>
+                </div>
+                
+            </article>
+        </div>
+    </main>
+
 </body>
 
 </html>
