Tela de recuperação finalizada

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -22,7 +22,7 @@
     <main>
         <div id="main-box">
             <article id="login-box">
-                <div id="alinhamento">
+                <div>
                     <h2 id="main-rotulo">Criar uma conta no Satisfying.you</h2>
                     <form>
                         <label>E-mail</label>
