--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -22,7 +22,7 @@
     <main>
         <div id="main-box">
             <article id="login-box">
-                <div id="alinhamento">
+                <div id>
                     <h2 id="main-rotulo">Fazer login</h2>
                     <form>
                         <label>E-mail</label>
