--- a/src/pages/recuperacao.html
+++ b/src/pages/recuperacao.html
@@ -18,6 +18,31 @@
         <img src="../img/bom.svg" alt="SatisfyingYou logo">
         <h1 id="logo-title">Satisfying.you</h1>
     </div>
+
+    <main>
+        <div id="main-box">
+            <article id="login-box">
+                <div>
+                    <h2 id="main-rotulo">Redefina a sua senha</h2>
+                    <h3 id="texto-rotulo">Digite o seu e-mail para recuperação</h3>
+                    <form>
+                        <label>E-mail</label>
+                        <input class="login-info"  type="text" value="jurandir.pereira@hotmail.com">
+                    </form> 
+                    <div id="rec-block">   
+                        <p id="text-invalido">Formato inválido de e-mail.</p>
+                    </div>
+                    <div id="rodape">
+                        <a href="login.html">
+                            <button class="botao-recuperar">Recuperar</button>
+                        </a>
+                    </div>
+                </div>
+                
+            </article>
+        </div>
+    </main>
+
 </body>
 
 </html>
