Atualização da tela nova-pesquisa

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -20,9 +20,11 @@
             <h1 id="logo-title">Satisfying.you</h1>
         </div>
         <nav>
-            <button id="nova-pesquisa">
-                Nova pesquisa
-            </button>
+            <a href="nova-pesquisa.html">
+                <button id="nova-pesquisa">
+                    Nova pesquisa
+                </button>
+            </a>
             <a id="sair" href="login.html">
                 Sair
             </a>
