Atualização tela modificar-pesquisa

--- a/src/pages/nova-pesquisa.html
+++ b/src/pages/nova-pesquisa.html
@@ -13,10 +13,12 @@
     </head>
     <body>
         <header>
-            <div id="logo">
-                <img src="../img/bom.svg" alt="SatisfyingYou logo">
-                <h1 id="logo-title">Satisfying.you</h1>
-            </div>
+            <a href="../pages/home.html">
+                <div id="logo" >         
+                    <img src="../img/bom.svg" alt="SatisfyingYou logo">
+                    <h1 id="logo-title">Satisfying.you</h1>
+                </div>
+             </a>
             <nav>
                 <a id="botao-sair" href="login.html">
                     Sair
@@ -35,7 +37,7 @@
                             <input class="pesquisa-info"  type="text" value="23/05/2023">
                             <label>Imagem</label>
                             <span id="input-imagem">
-                                <input class="pesquisa-info"  type="text" value="carnaval2022.png" >
+                                <input id="pesquisa-img"  type="text" value="carnaval2022.png" >
                                 <a href="">
                                     <button id="botao-imagem">Escolher arquivo</button>
                                 </a>
